🎨 style(style.css): update nav link styles to remove text decoration and border 🐛 fix(PageController.php): update query to select only public snippets 🐛 fix(PageController.php): update pagination limit to display 9 results per page instead of 10 🐛 fix(AppFixtures.php): update user role to ROLE_ADMIN 🎨 style(base.html.twig): wrap logo image in a link to the homepage 🐛 fix(base.html.twig): remove unnecessary paragraph and move it below the logo 🎨 style(register.html.twig): remove placeholder attribute from form fields 🎨 style(snippet.html.twig): remove text-lead class from pre element

--- a/public/style.css
+++ b/public/style.css
@@ -14,6 +14,14 @@ nav, .heading {
     flex-direction: column;
     align-items: center;
 }
+nav a {
+    text-decoration: none;
+    border: inherit;
+}
+nav a:hover {
+    text-decoration: none;
+    border: inherit;
+}
 nav img {
     border: 0;
     margin: 1rem;
